make ServerLifeCycleListener access contextual data shared accross server and webapp execution